# $Id: Makefile.am,v 1.1 2003-06-13 10:05:41 schwarz Exp $
#
# SDIF/macosxbuild/Makefile.am	
#
# just to include Mac ProjectBuilder compilation project to source
# distribution
#
# $Log: not supported by cvs2svn $

SUBDIRS		= SDIF.pbproj

distdir		= $(PACKAGE)-$(VERSION)-src

# more files to include in dist
EXTRA_DIST 	= README.MacOSX
