dnl -*-autoconf-*-  (No, it's an autoconf file!)
dnl -*-m4-*- (He emacs, it's a m4 file)
dnl $Id: configure.in,v 1.9 2003-04-06 16:43:30 roebel Exp $
dnl
dnl configure.in		Feb 2003      Axel Roebel
dnl
dnl Source file for GNU autoconf, generates configure script.
dnl
dnl
dnl This file is part of the IRCAM EASDIF Library (http://www.ircam.fr/sdif)
dnl
dnl Copyright (C) 2002-2003 by IRCAM-Centre Georges Pompidou, Paris, France.
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Lesser General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl
dnl See file COPYING for further informations on licensing terms.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU Lesser General Public License for more details.
dnl
dnl You should have received a copy of the GNU Lesser General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
dnl
dnl
dnl The EASDIF library provides an Easy Api for IRCAMs SDIF library. 
dnl
dnl

dnl $Log: not supported by cvs2svn $
dnl Revision 1.8  2003/04/03 13:35:21  schwarz
dnl Version number set in configure.in, generates Doxyfile with correct number.
dnl Version numbering scheme with 3 fields:
dnl - first  number: major version, only gigantic changes
dnl - second number: minor version, records changes in API
dnl 		 (added/removed functions, changed prototypes)
dnl - third  number: release number, for intermediate releases,
dnl 		 bug fixes, etc. that don't change the API
dnl



dnl To check if directory is present
AC_INIT(easdif/easdif.h)

dnl ############################################################
dnl PACKAGE NAME AND VERSION
AC_MSG_RESULT(PACKAGE NAME)

PACKAGE=Easdif

versmaj=0
versmin=3
versrel=1
VERSION=${versmaj}.${versmin}.${versrel}

AC_SUBST(PACKAGE)
AC_SUBST(EASDIF_VERSION_MAJ)
AC_SUBST(EASDIF_VERSION_MIN)
AC_SUBST(EASDIF_VERSION_RELEASE)

AC_DEFINE_UNQUOTED(EASDIF_VERSION_MAJ,$versmaj,[Major version number of easdif lib])
AC_DEFINE_UNQUOTED(EASDIF_VERSION_MIN,$versmin,[Minor version number of easdif lib])
AC_DEFINE_UNQUOTED(EASDIF_VERSION_RELEASE,$versrel,[Release number of easdif lib])

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(easdif/easdif_version.h)

dnl ############################################################
dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Check for libtool
dnl disable shared libraries by default because they do
dnl not work reliably on MacOSX darwin

AC_DISABLE_SHARED	
AC_PROG_LIBTOOL

dnl Configure SDIF
export enable_cpp=yes
AC_CONFIG_SUBDIRS(SDIF)

dnl Check for headers
AC_MSG_RESULT(CHECK FOR HEADERS)
AC_HEADER_STDC
dnl AC_CHECK_HEADERS(SDIF/include/sdif.h)



dnl ############################################################
dnl DEBUG feature

AC_SUBST(SELLIB)
SELLIB=libEasdif.la


AC_ARG_ENABLE(debug,
[--enable-debug        compile with debug enabled],
[echo FEATURE enable-debug... $enableval; 
if test "$enableval" = "yes"; then
	CXXFLAGS="-g2";
else 
	CXXFLAGS="-O3";
fi ],
[
CXXFLAGS="-O3";
])


dnl ############################################################
dnl find SDIF objects that have to be included into Easdif
AC_MSG_RESULT(FIND SDIF FILES)
AC_SUBST(SDIFCPPLIB)
SDIFCPPLIB=../SDIF/sdifcpp/libsdif-cpp.la

dnl ############################################################
dnl CREATE OUTPUT FILES
AC_MSG_RESULT(CREATE OUTPUT FILES)
AC_OUTPUT(Makefile 
easdif/Makefile 
test/Makefile
Easdif.pc
Doxyfile
)

AC_MSG_RESULT(END OF $PACKAGE CONFIGURATION)
