dnl -*-autoconf-*-  (No, it's an autoconf file!)
dnl -*-m4-*- (He emacs, it's a m4 file)
dnl $Id: configure.in,v 1.26 2004-01-19 16:20:24 roebel Exp $
dnl
dnl configure.in		Feb 2003      Axel Roebel
dnl
dnl Source file for GNU autoconf, generates configure script.
dnl
dnl
dnl This file is part of the IRCAM EASDIF Library (http://www.ircam.fr/sdif)
dnl
dnl Copyright (C) 2002-2003 by IRCAM-Centre Georges Pompidou, Paris, France.
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Lesser General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl
dnl See file COPYING for further informations on licensing terms.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU Lesser General Public License for more details.
dnl
dnl You should have received a copy of the GNU Lesser General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
dnl
dnl
dnl The EASDIF library provides an Easy Api for IRCAMs SDIF library. 
dnl
dnl

dnl $Log: not supported by cvs2svn $
dnl Revision 1.25  2003/11/18 18:24:21  roebel
dnl Version 0.7.3, added check for sstream/strstream header.
dnl changed language to CPLUSPLUS.
dnl
dnl Revision 1.24  2003/08/06 18:03:03  roebel
dnl demo command line follows configured prefix
dnl
dnl Revision 1.23  2003/07/10 17:19:42  roebel
dnl Finished gcc3_2 suffix support for test programs
dnl
dnl Revision 1.22  2003/07/09 21:19:47  roebel
dnl Provide configure switch to add gccversion to library name to distinguish
dnl gcc3.2 from gcc2.96 compiled libraries.
dnl
dnl Revision 1.21  2003/07/07 10:29:46  roebel
dnl Added support for eInt1 and eUInt1 data types, resize of matrix now reinitializes all elements to 0
dnl
dnl Revision 1.20  2003/05/26 16:10:17  roebel
dnl Fixed version macros
dnl
dnl Revision 1.19  2003/05/24 00:28:34  roebel
dnl Version 0.7.0
dnl
dnl Revision 1.18  2003/05/22 21:37:53  roebel
dnl version 0.6.0
dnl
dnl Revision 1.17  2003/05/21 20:40:49  roebel
dnl Version 0.5.1
dnl
dnl Revision 1.16  2003/05/19 14:06:00  roebel
dnl Resolved possible name conflict due to declaration of VERSION in installed files.
dnl easdif_config.h is used only locally while easdif_version.h is installed and used by
dnl user applications.
dnl VERSION is now a c-string.
dnl
dnl Revision 1.15  2003/05/18 21:12:03  roebel
dnl Version 0.5.0
dnl
dnl Revision 1.14  2003/04/18 16:46:54  schwarz
dnl Made easdif swiggable -> update version to 0.4.0, because of
dnl small API changes:
dnl - eof() returns bool, not bool&
dnl - Matrix::Set takes int/float, not int&/float&
dnl
dnl Revision 1.13  2003/04/09 16:10:56  roebel
dnl Version 0.3.2 (first public release).
dnl
dnl Revision 1.12  2003/04/09 12:30:42  roebel
dnl Changed default configuration back to enable-shared but added
dnl README.MacOSX to announce problems with shared libraries to users.
dnl
dnl Revision 1.11  2003/04/08 23:21:54  roebel
dnl Added test for program dot, Moved determination of SDIF version in Makefile because SDIF may be configured only at the end of configure
dnl
dnl Revision 1.10  2003/04/08 18:28:27  roebel
dnl Support SDIF version in Easdif Makefiles.
dnl
dnl Revision 1.9  2003/04/06 16:43:30  roebel
dnl Added copyright info.
dnl
dnl Revision 1.8  2003/04/03 13:35:21  schwarz
dnl Version number set in configure.in, generates Doxyfile with correct number.
dnl Version numbering scheme with 3 fields:
dnl - first  number: major version, only gigantic changes
dnl - second number: minor version, records changes in API
dnl 		 (added/removed functions, changed prototypes)
dnl - third  number: release number, for intermediate releases,
dnl 		 bug fixes, etc. that don't change the API
dnl



dnl To check if directory is present
AC_INIT(easdif/easdif.h)

dnl ############################################################
dnl PACKAGE NAME AND VERSION
AC_MSG_RESULT(PACKAGE NAME)

PACKAGE=Easdif

EASDIF_VERSION_MAJ=0
EASDIF_VERSION_MIN=8
EASDIF_VERSION_RELEASE=0

VERSION="${EASDIF_VERSION_MAJ}.${EASDIF_VERSION_MIN}.${EASDIF_VERSION_RELEASE}"

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(EASDIF_VERSION_MAJ)
AC_SUBST(EASDIF_VERSION_MIN)
AC_SUBST(EASDIF_VERSION_RELEASE)



AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(easdif/easdif_config.h)


dnl ############################################################
dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_SUBST(HAVEDOT)
AC_CHECK_PROG(HAVEDOT,dot,YES,NO)


dnl Check for libtool
dnl you better disable shared libraries due to problems with libtool
dnl on MacOSX.

AC_PROG_LIBTOOL

dnl Configure SDIF
export enable_cpp=yes
AC_CONFIG_SUBDIRS(SDIF)


dnl Check for headers
AC_MSG_RESULT(CHECK FOR HEADERS)
AC_HEADER_STDC
dnl AC_CHECK_HEADERS(SDIF/include/sdif.h)

AC_LANG_CPLUSPLUS
AC_CHECK_HEADERS(sstream strstream,break)


dnl ############################################################
dnl DEBUG feature

AC_SUBST(SELLIB)

AC_ARG_ENABLE(suffix,
[  --enable-suffix         add suffix _gcc3_2 to library name to distinguish between old and new C++ ABI],
[echo FEATURE enable-suffix... $enableval;
if test "$enableval" = "yes"; then
        SELLIB=libEasdif_gcc3_2.la;
	AM_CONDITIONAL(GCCSUFFIX,true)
else
        SELLIB=libEasdif.la
	AM_CONDITIONAL(GCCSUFFIX,false)
fi ],
[
SELLIB=libEasdif.la;
AM_CONDITIONAL(GCCSUFFIX,false)
])


AC_ARG_ENABLE(debug,
[  --enable-debug          compile with debug enabled],
[echo FEATURE enable-debug... $enableval; 
if test "$enableval" = "yes"; then
	CXXFLAGS="-g2";
else 
	CXXFLAGS="-O3";
fi ],
[
CXXFLAGS="-O3";
])


dnl ############################################################
dnl find SDIF objects that have to be included into Easdif
AC_MSG_RESULT(FIND SDIF FILES)
AC_SUBST(SDIFCPPLIB)
SDIFCPPLIB=../SDIF/sdifcpp/libsdif-cpp.la

dnl ############################################################
dnl CREATE OUTPUT FILES
AC_MSG_RESULT(CREATE OUTPUT FILES)
AC_OUTPUT(Makefile 
easdif/Makefile 
easdif/easdif_version.h
easdif/easdifintro.h
test/Makefile
Easdif.pc
Doxyfile
)

AC_MSG_RESULT(END OF $PACKAGE CONFIGURATION)
